<resources>
    <string name="app_name">Kawerna</string>

    <!-- START ACTIVITY -->

    <string name="tab_login">Zaloguj</string>
    <string name="tab_sign_up">Nowy użytkownik</string>

    <string name="hint_email">Email</string>
    <string name="hint_name">Nazwa</string>
    <string name="hint_password">Hasło</string>

    <string name="btn_submit_login">ZALOGUJ</string>
    <string name="btn_submit_sign_up">ZAREJESTRUJ</string>

    <string name="password_forgot">Zapomniałem hasła</string>


    <!-- RESTORE PASSWORD ACTIVITY -->

    <string name="restore_password">Wyślij hasło</string>
    <string name="restore_password_instruction">Podaj swój email. Na wpisany adres zostanie wysłane Twoje hasło.</string>

    <!-- MAIN ACTIVITY -->

    <string name="tab_board">Tablica</string>
    <string name="tab_statistics">Statystyki</string>
    <string name="tab_barcode">Profil</string>

    <string name="title_qr_code">Twój kod QR:</string>
    <string name="desc_qr_code">Kod QR</string>
    <string name="confirm">Zatwierdź</string>

    <string name="item_sign_out">Wyloguj</string>

    <!-- GAME ACTIVITY -->

    <string name="btn_confirm_players">POTWIERDŹ</string>

    <string name="ANIMALS">Zwierzęta</string>
    <string name="ANIMALS_LACK">Brakujące zwierzęta</string>
    <string name="CEREAL">Zboże</string>
    <string name="VEGETABLES">Warzywa</string>
    <string name="RUBIES">Rubiny</string>
    <string name="DWARFS">Krasnoludy</string>
    <string name="AREAS">Pastwiska i komnaty</string>
    <string name="PREMIUM_AREAS">Usprawnienia</string>
    <string name="UNUSED_AREAS">Niewykorzystane pola</string>
    <string name="GOLD">Złote monety</string>

    <string name="TOTAL">Wynik</string>
    <string name="place">Miejsce</string>
    <string name="players_num">Liczba graczy</string>
    <string name="date">Data</string>

    <string name="btn_finish">ZAKOŃCZ</string>
</resources>
